# dmt_test_task

./: .gitignore  CMakeLists.txt  README.md
src/: custombasethread.cpp  customdelegate.cpp  custommodel.cpp  customthread.cpp  customtreeitem.cpp  data.cpp  main.cpp  mainwidget.cpp  misc.cpp  threadfuncs.cpp
src/headers/: custombasethread.h  customdelegate.h  custommodel.h  customthread.h  customtreeitem.h  datatypes.h  mainwidget.h  misc.h  threadfuncs.h
ui/: mainwidget.ui
